src/test/deca/context/valid/provided/ContextSansObjet/OperationsArithmetiques/MultiplyIntInt.deca
//Description :
//	Vérification contextuelle de l'opérateur * avec des variables int
//
//Résultats :
//	ok

{
    int x = 1*1;
    int y = 3;
    int z = x*y;
}