src/test/deca/context/invalid/ContextSansObjet/OperationsBooleennes/LeqIntBool.deca
//Description:
//  Vérification contextuelle de <= avec des types incompatibles (int, boolean)
//
//Résultat:
//  Erreur contextuelle
//  ligne 10 : types non compatibles pour faire la comparaison
{
    int x = 1;
    boolean y = true;
    x <= y ;
}